--- a/templates/home.html
+++ b/templates/home.html
@@ -94,14 +94,30 @@
     </section>
 
 
+
+    <div class="container ct-u-positionRelative">
+    <div class="ct-u-positionRelative">
+        <div class="ct-pageSectionHeader ct-offsetTop25 ct-u-borderBottomGrayLighter">
+            <h4 class="ct-fw-300 ct-u-size40 ct-u-paddingBottom20">me information bout us So <span>Aquarium's Life...</span></h4>
+            <div class="ct-u-paddingBottom40">
+                <p class="text-justify">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+
     <section class="ct-u-paddingBoth30">
         <div class="container">
-            <div class="ct-tabHeader ct-tabHeader--motive" role="tabpanel">
-                 <ul class="list-unstyled text-uppercase ct-fw-600" role="tablist">
-                    <li role= class=""><div class="ct-tabBorder"><a href="{{url_for("last_posts")}}">Latest posts </a></div><div class="mini-triangle"></div></li>
-                </ul>
-            </div>
+            <a href="{{url_for("last_posts")}}" class="blue-hover">
 
+        <h4 class="ct-fw-600 ct-u-size30 ct-u-paddingBottom10 ct-u-paddingTop5 text-uppercase text-center blue-hover">Latest posts </h4>
+
+</a>
             <div class="ct-blog ct-js-blogMasonry ct-u-borderBottomGrayLighter ct-u-paddingBottom20 ">
                         {% for post in posts%}
                             {% if not post.deleted %}
@@ -117,20 +133,22 @@
     </section>
 
 
-    <section class="ct-u-motiveLight2--bg ct-u-paddingBoth30">
+    <section class="ct-u-motiveLight2--bg ct-u-paddingBottom10">
         <div class="container">
-            <div class="ct-tabHeader ct-tabHeader--motive" role="tabpanel">
-                 <ul class="list-unstyled text-uppercase ct-fw-600" role="tablist">
-                    <li class=""><div class="ct-tabBorder"><a href="{{url_for("popular_product")}}" >Popular product </a></div><div class="mini-triangle"></div></li>
-                </ul>
-            </div>
 
-            <div id="product_container" class="row ct-u-paddingTop20">
+        <a href="{{url_for("popular_product")}}" class="blue-hover">
+
+        <h4 class="ct-fw-600 ct-u-size28 ct-u-paddingBottom10 ct-u-paddingTop5 text-uppercase text-center blue-hover">Popular products</h4>
+
+</a>
+
+
+            <div id="product_container" class="row">
         <div class="ct-product">
             {% for product in products %}
 
                 {% if not product.deleted %}
-                    <div class="col-md-4 col-xs-12 ct-u-paddingTop30">
+                    <div class="col-md-4 col-xs-12 ct-u-paddingTop15 one-product">
 
                     {{ products_macro(product, products_relationship) }}
 
